# jvto-whatsapp-agent-runtime

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: validate.yml
catalog/: provenance.json
catalog/agent-catalog/: catalog-manifest.json  customer-link-registry.json  customer-media-registry.json
config/: data-ownership.yaml  guardrails.yaml  intent-routing.yaml  release-policy.yaml  tool-policy.yaml  upstreams.yaml
config/customer-sales/: guardrails-and-state.yaml  routing-and-clarification.yaml
contracts/: customer-response-draft.schema.json  decision-envelope.schema.json  delivery-plan.schema.json  deployment-approval.schema.json  itinerary-core-request.schema.json  itinerary-core-response.schema.json  live-tool-response.schema.json  resolved-customer-context.schema.json  response-plan.schema.json  trip-brief.schema.json
docs/: architecture.md  customer-sales-decision-layer.md  deployment-approval.md  feasibility-api.md  integration-plan.md  live-tools-api.md  meta-webhook.md  project-context.md  resolver-layer.md  response-generation-contract.md  source-mapping.md
scripts/: build_release.sh  validate_release.sh
src/jvto_agent_runtime/: __init__.py  api.py  asset_resolver.py  (+20 more)
tests/: test_api_delivery_plan.py  test_customer_sales_executor.py  test_decision_engine.py  test_delivery_adapter.py  test_deployment.py  test_feasibility.py  test_live_tools.py  test_local_catalog.py  test_meta_webhook.py  test_release_builder.py  test_repo_validation.py  test_resolvers.py  test_response_composer.py  test_sales_intelligence.py
(+28 files in other folders)
