[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jvto-whatsapp-agent-runtime"
version = "0.1.0"
description = "Source-locked governed runtime for JVTO WhatsApp Meta agent"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.21",
  "fastapi>=0.110",
  "uvicorn>=0.27"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
jvto-agent = "jvto_agent_runtime.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
